# Overlap

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
apps/desktop/: package.json  tsconfig.json
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/routes/: App.tsx  Settings.tsx  Thread.tsx
apps/desktop/src/ui/: README.md
apps/desktop/static/: index.html
apps/web/: next.config.js  package.json  proxy.ts
apps/web/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/api/gemini/: route.ts
apps/web/app/api/llm/: route.ts
apps/web/app/api/me/: route.ts
apps/web/app/api/onboarding/: route.ts
apps/web/app/api/org-members/: route.ts
apps/web/app/api/organization-request/: route.ts
apps/web/app/api/thread/: route.ts
apps/web/app/app/: layout.tsx  loading.tsx  page.tsx
apps/web/app/app/settings/: loading.tsx  page.tsx
apps/web/app/auth/callback/: route.ts
apps/web/app/login/: page.tsx
apps/web/app/onboarding/: layout.tsx  page.tsx
apps/web/app/onboarding/connect/: page.tsx
apps/web/components/: LoadingScreen.tsx
apps/web/lib/: calendar-port.ts  chat-context.ts  deps.ts  gemini.ts  google-calendar.ts  google-gemini.ts  openrouter.ts  org-members.ts  supabase-thread-db.ts
apps/web/lib/admin/: is-admin.ts
apps/web/lib/auth/: session.ts
apps/web/lib/supabase/: admin.ts  client.ts  server.ts
docs/: desktop-build.md
(+21 files in other folders)
