[package]
name = "overlap-desktop"
version = "0.1.0"
description = "Overlap native desktop app (Tauri shell)"
edition = "2021"
license = "MIT"

[lib]
name = "overlap_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
